<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ms="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/tool_bar"
        app:title="微信监听"
        app:titleTextColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_bg"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="监听中..."
        android:gravity="center"
        />


    <com.kotlin.khum.opensqlcipher.activity.CheckableItem
        android:id="@+id/auto_listen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ms:topText="@string/setting_update_title"
        ms:onText="@string/setting_update_on"
        ms:offText="@string/setting_update_off"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_state"
        />
    <com.kotlin.khum.opensqlcipher.activity.CheckableItem
        android:id="@+id/auto_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ms:topText="@string/setting_auto_send"
        ms:onText="@string/setting_send_on"
        ms:offText="@string/setting_send_off"
        app:layout_constraintTop_toBottomOf="@+id/auto_listen"
        />

    <LinearLayout
        android:id="@+id/ll_server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/auto_post"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:text="@string/setting_server"
            />
        <TextView
            android:id="@+id/tv_server_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_server_add"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>