<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_background"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/setting_server_modify"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/tv_input_url"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_input_number"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:textColor="#444444"
            android:textColorHint="#a0a0a0"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:hint="@string/setting_server_url"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:text="upload"
            android:textColor="#444444"
            android:layout_gravity="bottom"
            android:layout_marginBottom="6dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:padding="12dp"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/tv_confirm"
            android:padding="12dp"
            android:text="@string/cancel"
            />

    </RelativeLayout>

</LinearLayout>
